# gender_mobility_networks

./: .gitignore  PSEUDOCODE.md  README.md  pyproject.toml
configs/: demo_config.yaml  monthly_met_all_config.yaml
data/demo/: generate_demo_data.py  inspect_demo_data.ipynb
data/demo/demographics/: demographics.parquet
data/demo/output/: user_metrics_demo.csv
data/demo/output/metrics/user_group=00/: .part-00000-f814be8f-ea4b-440c-ad2b-5b8b3c80b3a0-c000.snappy.parquet.crc  part-00000-f814be8f-ea4b-440c-ad2b-5b8b3c80b3a0-c000.snappy.parquet
data/demo/stops/user_group=00/: stops.parquet
notebooks/: fig1_gendiff_activity_repertoire.ipynb  fig2_gendiff_nwmet.ipynb  fig3_gendiff_tours.ipynb  fig4_gendiff_efficiency.ipynb
scripts/: 01_compute_metrics.py  02_analyze_gender_diff_Nk.py  03_compute_nwmet_matching_byNk.py  04_analyze_gender_diff_nwmet.py  05_compute_sequences_tours.py  06_analyze_gender_diff_tours.py  07_anlayze_gender_diff_toureff.py
src/compute_metrics/metrics/: mobility_metrics.py  network_builder.py  network_efficiency_metrics.py  network_metrics.py  registry.py  sequence_metrics.py
src/compute_metrics/pipelines/: mobility_metrics_pipeline.py  network_metrics_pipeline.py
src/compute_seq_tours/: io.py  sequences_tours.py
src/nearest_neighbor_matching/: nnmatch_Nk_gender.py
src/statistical_analysis/: SUPERSEEDED_bootstrap_median.py  basic_stats.py
src/utils/: utils.py
