[project]
name = "gender-mobility-networks"
version = "0.1.0"
description = "A PySpark pipeline to reproduce: Women’s mobility networks enable more efficient travel"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Sílvia De Sojo Caso" }]

# Dependencies your package needs
dependencies = ["pyspark", "pyyaml", "tqdm"]

# Optional but recommended
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["compute_metrics*"]
